GearsetPOC/force-app/main/default/objects/EDCS_History__c/EDCS_History__c.object-meta.xml
<CustomObject>
    <label>EDCS History</label>
    <nameField>
        <displayFormat>EDCSH-{0000000000}</displayFormat>
        <label>EDCS History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EDCS History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>