GearsetPOC/force-app/main/default/objects/EDCS_History__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <label>Departure Date</label>
    <length>8</length>
    <type>Text</type>
</CustomField>