GearsetPOC/force-app/main/default/objects/EDCS_History__c/fields/Tier_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Tier_Status_Code__c</fullName>
    <label>Tier Status Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>